Dynamic-access coverage for org.jline.terminal.impl.exec.ExecTerminalProvider$ReflectionRedirectPipeCreator (30/33)